<resources>
    <string name="app_name">LapakKita</string>
    <string name="title_activity_onboard">OnboardActivity</string>
    <string name="lorem">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non elit sed lacus pretium viverra. Nulla in efficitur lectus. Ut luctus finibus metus, sit amet sollicitudin magna consequat ac. Praesent justo elit, feugiat sed blandit eu, pretium vitae nunc. Nunc dictum arcu urna, nec pulvinar nibh semper luctus. Proin vehicula orci volutpat enim vestibulum, vestibulum suscipit ligula luctus. Nulla at ultricies turpis. Donec vel sollicitudin tortor, tincidunt convallis ex. Ut condimentum felis ac suscipit sodales. Vivamus id nisl in lacus ultrices hendrerit. Nulla sodales nulla sed tristique semper. Nulla tincidunt fringilla felis. Fusce dignissim eleifend massa id tincidunt. Proin ut libero quis tortor maximus semper.
        Mauris eget finibus turpis. Nulla vel lorem in dolor aliquam volutpat. Pellentesque non lorem eget elit tempor hendrerit nec aliquam lectus. Morbi consequat lacinia massa vel elementum. Donec volutpat ex et massa pellentesque consequat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus sit amet augue a velit imperdiet hendrerit. Donec eu efficitur magna, ac pretium lectus. Sed aliquam nibh ac mauris condimentum, sed sagittis mauris lobortis. Donec eros nulla, imperdiet in ornare fringilla, vestibulum mattis nibh.
        Aenean purus tellus, cursus at ipsum ultrices, efficitur volutpat lectus. Etiam vehicula velit ligula, sit amet eleifend lorem facilisis vitae. Maecenas finibus interdum justo non commodo. Integer massa arcu, molestie ac orci quis, accumsan aliquam sapien. Morbi ut congue lacus. Aliquam vel elementum massa, non varius mauris. Vestibulum tristique nisi est, posuere cursus lectus imperdiet vel. Sed ullamcorper posuere tellus, et faucibus ante maximus ut. Phasellus tincidunt neque risus. Praesent dignissim urna vestibulum augue aliquet pretium. Morbi mattis condimentum massa, a suscipit nunc tincidunt sit amet. Phasellus dignissim tellus eu lacus malesuada semper. Donec ornare bibendum turpis vitae ornare.
    </string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="user">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back">Back</string>
    <string name="pass_visible_on">Toggle password to visible on</string>
    <string name="pass_visible_off">Toggle password to visible off</string>
    <string name="google_login">Sign in with Google</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="error_user">Please fill your username</string>
    <string name="error_email">Your email is not valid</string>
    <string name="error_password">Password must contain more than 8 characters</string>
    <string name="error_confirm_password">Password is not matched</string>
    <string name="menu_home">Home</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="image_place">Image Place</string>
    <string name="rating">Rating</string>
    <string name="find_location">Find Location</string>
    <string name="title_activity_find_route">FindRouteActivity</string>
    <string name="review">Review</string>
    <string name="add_review">Add Review</string>
    <string name="find_review">Find review</string>
    <string name="send_review">Send review</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="user_photo">User Photo</string>
    <string name="give_rate">What\'s your rate?</string>
    <string name="give_comment">Your comment</string>
    <string name="comment_empty">Please fill up your comment</string>
    <string name="rating_empty">Please give your rate</string>
    <string name="search_bar">Search bar…</string>
    <string name="search_store">Search store</string>
    <string name="recommendation">Recommendation</string>
    <string name="find_recommendation">Find recommendation</string>
    <string name="custom_search">Custom search</string>
    <string name="search">Search</string>
    <string name="select_category">Select Category</string>
    <string name="add_bookmark">Add to bookmark</string>
    <string name="added_bookmark">Added to bookmark</string>
    <string name="remove_bookmark">Remove from bookmark</string>
    <string name="removed_bookmark">Removed from bookmark</string>
    <string name="share_content">
        Find nearby store with LapakKita\n %s\n
        https://www.google.com/maps/search/?api=1&amp;query=%f,%f
    </string>
    <string name="share_via">Share via…</string>
    <string name="selected_category">Selected category: %s</string>
    <string name="logout">Logout</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile_photo">Profile photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="not_granted_camera">Camera is not granted</string>
    <string name="take_image_from">Take image from…</string>
    <string name="connection_error">Network problem.\nPlease check your connection</string>
    <string name="sign_up_success">Sign up successful</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="used_email">Email already used</string>
    <string name="incorrect_email_password">Incorrect email or Password</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="count_rating">(%d users)</string>
    <string name="no_data">No data</string>
    <string name="not_found">Not found</string>
</resources>