<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.OnboardActivity"
    android:background="@drawable/onboard_bg">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="24dp"
            android:paddingTop="30dp"
            android:orientation="vertical"
            android:background="@drawable/radius_bottom"
            app:layout_constraintTop_toBottomOf="@id/guide"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlSymmetry">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/TextContent.Header"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            style="@style/TextContent.Subtitle"/>
        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="28dp"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>