<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddReviewActivity">
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/review_top_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/review_top_bar"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <ImageView
                android:id="@+id/review_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/onboard_bg"
                android:contentDescription="@string/user_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/review_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@id/review_photo"
                app:layout_constraintStart_toEndOf="@id/review_photo"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextContent.SubHeader2"/>
            <TextView
                android:id="@+id/review_desc"
                style="@style/TextContent.Subtitle"
                android:layout_width="0dp"
                android:text="@string/lorem"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/review_user"
                app:layout_constraintStart_toStartOf="@id/review_user"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_rate"
        style="@style/TextContent.SubHeader2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/give_rate"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/card_store"
        app:layout_constraintTop_toBottomOf="@id/card_store" />
    <RatingBar
        android:id="@+id/ratingbar_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/card_store"
        app:layout_constraintTop_toBottomOf="@id/tv_rate" />
    <TextView
        android:id="@+id/tv_comment"
        style="@style/TextContent.SubHeader2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/give_comment"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/card_store"
        app:layout_constraintTop_toBottomOf="@id/ratingbar_review" />
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/comment_edt"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/add_review_btn"
        app:layout_constraintEnd_toEndOf="@+id/card_store"
        app:layout_constraintStart_toStartOf="@id/card_store"
        app:layout_constraintTop_toBottomOf="@id/tv_comment" />
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/add_review_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>