<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="96dp">
            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                style="@style/TextContent.SubHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_image"
                android:layout_margin="16dp"/>
            <ImageView
                android:id="@+id/icon_rating"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/rating"
                android:src="@drawable/baseline_star_border_24"
                app:layout_constraintBottom_toBottomOf="@+id/detail_rating"
                app:layout_constraintStart_toStartOf="@id/detail_name"
                app:layout_constraintTop_toBottomOf="@id/detail_name" />
            <TextView
                android:id="@+id/detail_rating"
                style="@style/TextContent.SubHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/icon_rating"
                app:layout_constraintTop_toBottomOf="@id/detail_name"
                app:layout_constraintBottom_toBottomOf="@id/icon_rating"
                android:layout_marginStart="4dp"
                android:text="Rating" />
            <TextView
                android:id="@+id/detail_desc"
                style="@style/TextContent.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/detail_name"
                app:layout_constraintEnd_toEndOf="@id/detail_name"
                app:layout_constraintTop_toBottomOf="@id/detail_rating"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lorem_ipsum" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/find_location_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>